# voltaML-fast-stable-diffusion

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  404.html  CONTRIBUTION.md  Dockerfile  License  README.md  app.py  bot.py  build.sh  changelog.html  clip.diff  convert.py  docker-compose.yml  docker-run.sh  dockerfile  environment.yml  example.env  hashmap.json  index.html  infer.py  installation.html  introduction.html  main.py  models.py  optimize.sh  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  pytorch_model.py  requirements.txt  start.sh  test.ipynb  test.py  todo.html  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.ipynb_checkpoints/: requirements-checkpoint.txt  volta_accelerate-checkpoint.py  volta_infer-checkpoint.py
api/: __init__.py  app.py  index.html  types.py
assets/: api_index.md.02fde901.js  api_index.md.02fde901.lean.js  api_index.md.03634dd7.lean.js  api_index.md.048f97fd.lean.js  api_index.md.07d01e75.js  api_index.md.07d01e75.lean.js  api_index.md.0a2f08ff.lean.js  api_index.md.0b097743.js  api_index.md.0b097743.lean.js  api_index.md.0d2ab0d3.js  api_index.md.0d795648.lean.js  api_index.md.0dd9f250.js  api_index.md.0dd9f250.lean.js  api_index.md.0ef52808.js  api_index.md.0ef52808.lean.js  api_index.md.113f359f.lean.js  api_index.md.131649f5.js  api_index.md.131649f5.lean.js  api_index.md.150e5e32.lean.js  api_index.md.15a58648.js  api_index.md.15a58648.lean.js  api_index.md.16fdab23.js  api_index.md.17f2e1ad.lean.js  api_index.md.1800f604.js  api_index.md.1800f604.lean.js  api_index.md.1be039e1.lean.js  api_index.md.1caf8281.lean.js  api_index.md.1dc41e06.js  api_index.md.1dc41e06.lean.js  api_index.md.1e3b6f4c.js  api_index.md.1e3b6f4c.lean.js  api_index.md.22d91abf.js  api_index.md.22d91abf.lean.js  api_index.md.24e586ec.js  api_index.md.24e586ec.lean.js  api_index.md.26caebac.js  api_index.md.26caebac.lean.js  api_index.md.2fb80c21.js  api_index.md.2fb80c21.lean.js  api_index.md.2fcf5906.js  (+3967 more)
basics/: aitemplate.html  autoload.html  lora.html  models.html  textual-inversion.html
bot/: bot.py  bot_model_manager.py  commands.html  config.py  core.py  hardware.py  helper.py  image2image.py  index.html  inference.py  listeners.py  models.py  setup.html  shared.py  txt2img.py
core/: __init__.py  cluster.py  controlnet.py  controlnet_preprocessing.py  controlnet_utils.py  errors.py  files.py  flags.py  functions.py  gpu.py  inference_callbacks.py  install_requirements.py  lora.py  model_handler.py  models.py  optimizations.py  png_metadata.py  queue.py  schedulers.py  shared.py  shared_dependent.py  thread.py  types.py  utils.py
developers/: api.html  documentation.html  frontend.html  pytorch.html  testing.html
docker/: ait-no-mount.docker-compose.yml  ait.docker-compose.yml  cuda-no-mount.docker-compose.yml  cuda.docker-compose.yml
dockerfiles/: dockerfile  dockerfile.experimental  dockerfile.local  dockerfile.network  experimental  local
docs/: changelog.md  index.md  introduction.md  todo.md
experimental/: checkpoints.html  model-browser.html  optimization.html  settings.html  xformers.html
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.config.json  tsconfig.json  vite.config.ts
getting-started/: features.html  first-image.html  (+1 more)
manager/: Cargo.toml  build.rs
manager/src/: apt.rs  debug.rs  env.rs  environ.rs  install.rs  main.rs
manager/src/git/: checkout.rs  clone.rs  git.rs  mod.rs
manager/src/targets/: mod.rs  ubuntu.rs  windows.rs
manager/src/utils/: aitemplate.rs  mod.rs  nvidia.rs  python.rs  shell.rs
(+944 files in other folders)
