[project]
name = "voltaml-fast-stable-diffusion"
authors = [{ name = "Tomáš Novák", email = "tamoncz@gmail.com" }]
description = "Advanced Stable Diffusion WebUI with support for model acceleration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
dynamic = ["version"]

[project.urls]
homepage = "https://voltaml.github.io/voltaML-fast-stable-diffusion/"
documentation = "https://voltaml.github.io/voltaML-fast-stable-diffusion/"
repository = "https://github.com/voltaML/voltaML-fast-stable-diffusion"

[tool.ruff]
ignore = [
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def
]
target-version = "py39"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.poetry]
name = "voltaml-fast-stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Stax124 <tamoncz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
